--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,36 +1,62 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock title %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">  
+    <link rel="stylesheet"  type="text/css" href="{% block linkCss %}{% endblock linkCss %}">
+    <link rel="stylesheet" href="/static/basic.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark sticky-top" data-bs-theme="dark"> 
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/todo/">Todos</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            <button class="btn mx-2">Login</button><span>/</span>
-            <button class="btn mx-2">SignIn</button>
+    <div class='container sticky-top'>
+      <nav class="navbar navbar-expand-lg rounded-pill sticky-top shadow mt-2" style="background-color: #baeeffb3;"> 
+          <div class="container-fluid">
+            <a class="navbar-brand m-1" href="/">ToDo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                {% if user.is_authenticated  %}
+                <li class="nav-item">
+                  <a class="nav-link" href="/todo/">YourTodos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/createTodo/">CreateTodo</a>
+                </li>
+                {% endif %}
+              </ul>
+              {% if user.is_authenticated  %}
+
+                <form action='/search/' method='get' class="d-flex justify-content-center" role="search">
+                  <input class="form-control me-2" type="search" name='search' id='search' placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+
+                <div class="dropdown">
+                  <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{user.username}}
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/logout/">logout</a></li>
+                  </ul>
+                </div>
+
+              {% else %}
+
+                <a href='/login' class="btn mx-2">Login</a><span>/</span>
+                <a href='/signin' class="btn mx-2">SignIn</a>
+
+              {% endif %}
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+    </div>
     {% block body %}
     
     {% endblock body %}
