Improvement in Responsiveness

--- a/static/todo/css/todoList.css
+++ b/static/todo/css/todoList.css
@@ -1,9 +1,11 @@
 .card:hover{
     box-shadow: -10px 10px 30px rgba(0, 0, 0, 0.5);
     transform: scale(1.01);   
-
 }
 
-.card-bg{
-    background-color: rgb(162, 236, 255);
+.card{
+    border-radius: 10px;
+    margin:10px;
+    transition: all 0.3s;
 }
+
