--- a/templates/todo/todoDetails.html
+++ b/templates/todo/todoDetails.html
@@ -13,7 +13,7 @@
         <p class="card-text"><strong>Description:</strong> {{details.description}}</p>
         <p class="card-text"><strong>Priority:</strong> {{details.priority}}</p>
         <p class="card-text"><strong>Due Date:</strong> {{details.dueDate}}</p>
-        <p class="card-text"><strong>Tags/Labels:</strong> {{details.tag}}</p>
+        <p class="card-text"><strong>Tag/Label:</strong> {{details.tag}}</p>
         <p class="card-text"><strong>Status:</strong> {{details.status}}</p>
         <p class="card-text"><strong>Username:</strong> {{details.user}}</p>
       </div>
