--- a/templates/basic.html
+++ b/templates/basic.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class='container sticky-top'>
-      <nav class="navbar navbar-expand-lg rounded-pill sticky-top shadow mt-2" style="background-color: #baeeffb3;"> 
+      <nav class="navbar navbar-expand-lg rounded sticky-top shadow mt-2" style="background-color: #baeeffb3;"> 
           <div class="container-fluid">
             <a class="navbar-brand m-1" href="/">ToDo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
