--- a/templates/home/editTodo.html
+++ b/templates/home/editTodo.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class='d-flex justify-content-center py-4 '>
-        <form action='/editTodo/{{currDetails.sno}}' method='post' class='w-sm-100 w-md-50'> {% csrf_token %}
+        <form action='/editTodo/{{currDetails.sno}}' method='post' class='col-12 col-sm-10 col-md-6'> {% csrf_token %}
             <h1 class="h3 mb-3 fw-normal">Edit {{currDetails.task_name}}..</h1>
             <div class="m-3">
                 <label for="newTaskName">Task Name</label>
@@ -17,14 +17,16 @@
                 <textarea type="text" class="form-control" id="newDescription" name="newDescription" placeholder="description"
                     rows='3'>{{currDetails.description}}</textarea>
             </div>
-            <div class='m-3 row'>
-                <label for="newPriority">Select Priority</label>
-                <select class="form-select col-6 w-50" id='newPriority' name='newPriority' aria-label="Default select example" value='{{currDetails.priority}}'>
-                    <option {% if currDetails.priority == 'High' %} selected {% endif %} value="High">High</option>
-                    <option {% if currDetails.priority == 'Medium' %} selected {% endif %} value="Medium">Medium</option>
-                    <option {% if currDetails.priority == 'Low' %} selected {% endif %} value="Low">Low</option>
-                </select>
-                <div class=" col-6">
+            <div class='mt-3 ps-3 pe-3 row'>
+                <div class='col-sm'>
+                    <label for="newPriority">Select Priority</label>
+                    <select class="form-select" id='newPriority' name='newPriority' aria-label="Default select example" value='{{currDetails.priority}}'>
+                        <option {% if currDetails.priority == 'High' %} selected {% endif %} value="High">High</option>
+                        <option {% if currDetails.priority == 'Medium' %} selected {% endif %} value="Medium">Medium</option>
+                        <option {% if currDetails.priority == 'Low' %} selected {% endif %} value="Low">Low</option>
+                    </select>
+                </div>
+                <div class="col-sm">
                     <label for="newLastdate">Due Date</label>
                     <input type="date" class="form-control" id="newLastdate" name="newLastdate" placeholder="newLastdate" value='{{currDetails.dueDate|date:'Y-m-d'}}'>
                 </div>
@@ -43,7 +45,7 @@
                     <option {% if currDetails.status == 'Completed' %} selected {% endif %}value="Completed">Completed</option>
                 </select>
             </div>
-            <button class="btn btn-primary w-25 py-2 m-3" type="submit">Edit Todo</button>
+            <button class="btn btn-primary w-auto py-2 m-3" type="submit">Edit Todo</button>
         </form>
     </div>
 </div>
