--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class='d-flex justify-content-center py-4 '>
-        <form action='/login/' method='post' class='w-25'> {% csrf_token %}
+        <form action='/login/' method='post'> {% csrf_token %}
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <div class="form-floating">
               <input type="text" class="form-control" id="loginUsername" name='loginUsername' placeholder="username">
