--- a/templates/basic.html
+++ b/templates/basic.html
@@ -42,7 +42,7 @@
                   <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     {{user.username}}
                   </button>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="/logout/">logout</a></li>
                   </ul>
                 </div>
